Kund preliminära getters och setters klara